# app/Http/Controllers/User/ShopController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers\User;
 
 use App\Http\Controllers\Controller;
+use App\Http\Requests\ProductSearchFormRequest;
 use App\Http\Requests\User\CategoryIdRequest;
 use App\Http\Requests\User\ShopSearch;
 use App\Http\Resources\User\ProductsResource;
@@ -252,6 +253,62 @@ class ShopController extends Controller
         return $this->dataResponse(['shop' => new ShopResource($this->ShopRepository->showShop($id))], 'success', 200);
     }
 
+
+    /**
+     * @OA\Get(
+     *      path="/api/search/shop/",
+     *      operationId="searchShops",
+     *      tags={"home"},
+     *      summary="search for  shops",
+     *      description="Returns shops based on search ",
+     *     @OA\MediaType(mediaType="application/json"),
+     *      @OA\Parameter(
+     *          name="limit",
+     *          description="limit pagination",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *  @OA\Parameter(
+     *          name="page",
+     *          description="page number ",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *  @OA\Parameter(
+     *          name="search",
+     *          description="search field ",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
+     */
+
+
     public function searchShop(ShopSearch $request)
     {
         $search = $this->ShopRepository->searchShop($request->validated());
@@ -259,6 +316,149 @@ class ShopController extends Controller
     }
 
 
+
+    /**
+     * @OA\Get(
+     *      path="/api/product_search/shop/{id}",
+     *      operationId="searchProductsInShop",
+     *      tags={"home"},
+     *      summary="search for products in shop",
+     *      description="Returns products  based on search in a shop , filter and sort  ",
+     *     @OA\MediaType(mediaType="application/json"),
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="shop id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="search",
+     *          description="search field",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="filter",
+     *          description="filter by name or price or order",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="sortBy",
+     *          description="sort by asc or desc",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="limit",
+     *          description="limit pagination",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *  @OA\Parameter(
+     *          name="page",
+     *          description="page number ",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
+     */
+
+    public function searchProductInShop(ProductSearchFormRequest $request, $id)
+    {
+        $products = $this->ShopRepository->searchProductInShop($request->validated(), $id);
+        return $this->paginateCollection(ProductsResource::collection($products), $request->limit, 'products');
+    }
+
+
+    /**
+     * @OA\Get(
+     *      path="/api/shop/{id}/categories",
+     *      operationId="shopCategories",
+     *      tags={"home"},
+     *      summary="get shop categories ",
+     *      description="Returns shop  categories ",
+     *     @OA\MediaType(mediaType="application/json"),
+     *
+     *  @OA\Parameter(
+     *          name="id",
+     *          description="shop id field ",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *  @OA\Parameter(
+     *          name="limit",
+     *          description="limit  field ",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *  @OA\Parameter(
+     *          name="page",
+     *          description="page  field ",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
+     */
     public function shopCategories($id)
     {
         $categories = $this->ShopRepository->shopCategories($id);
